# fcitx5-lotus

./: .all-contributorsrc  .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  Makefile  Messages.sh  README.en.md  README.md  fcitx5-vmk-server.cpp  org.fcitx.Fcitx5.Addon.Lotus.metainfo.xml.in  org.fcitx.Fcitx5.Addon.Lotus.metainfo.xml.in.in  translate.sh  update_translate.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  packaging-dev.yml  packaging-release.yml  packaging.yml
addon/src/: vmk.cpp  vmk.h  vmkonfig.h
bamboo/: bamboo-c.go  fcitxbambooengine.go
data/: CMakeLists.txt
docs/: fcitx5-vmk-server@.service
fcitx5-vmk/src/: vmk.cpp  vmk.h
keymap-editor/: CMakeLists.txt  editor.h  keymap-editor.json  main.cpp  main.h
misc/: 99-lotus.rules  CMakeLists.txt  fcitx5-lotus-server@.service  fcitx5-lotus.openrc  fcitx5-lotus.runit
packaging/debian/: changelog  control  rules
packaging/rpm/fedora/: fcitx5-lotus.spec
packaging/rpm/opensuse/: fcitx5-lotus.spec
po/: fcitx5-lotus.pot  vi.po
server/: vmk-server.cpp
server/src/: fcitx5-vmk-server.cpp
settings-gui/: i18n.py  main.py
settings-gui/ui/: components.py  helpers.py  main_window.py
settings-gui/ui/pages/: about.py  backup.py  base_editor.py  dict_editor.py  (+4 more)
src/: CMakeLists.txt  emoji.cpp  emoji.h  lotus-candidates.h  lotus-config.h  lotus-engine.cpp  lotus-engine.h  lotus-monitor.cpp  lotus-monitor.h  lotus-state.cpp  lotus-state.h  lotus-utils.cpp  lotus-utils.h  lotus.conf.in  lotus.cpp  lotus.h  vmk.cpp  vmk.h
src-full/fcitx5-vmk/: README
(+1 files in other folders)
